--- a/index.Rmd
+++ b/index.Rmd
@@ -29,7 +29,7 @@ For a detailed explanation of our findings and conclusions, read our Project Rep
 <br>
 <i><b>Analysis</b></i>: Correlation of Risk Factors with Coronary Disease and Stroke at Census-tract level in New York City (2015-2016)</br> <br>
 <i><b>NYC Map</b></i>: Prevalence of Health Indicators throughout New York City</br><br>
-<i><b>Find your Risk!</b></i>: App that allows for input of risk factor variables of an indivdual and predicts the 10-year cardiovascular risk using the Framingham risk score algorithm</br><br>
+<i><b>Find Your Risk!</b></i>: App that allows for input of risk factor variables of an indivdual and predicts the 10-year cardiovascular risk using the Framingham risk score algorithm</br><br>
 
 For a brief overview of our website, view our screencast [here](https://www.youtube.com/watch?v=ogEZEKVYpkQ)
 
