--- a/final_project_report.Rmd
+++ b/final_project_report.Rmd
@@ -11,28 +11,26 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(tidyverse)
-library(corrplot)
-
+source("check_packages_report.R")
 ```
 
-#Motivation
+# Motivation
 
-###Some facts about heart disease
+### Some facts about heart disease
 
 * Approximately 1.5 million heart attacks and strokes occur every year in the United States.
 * More than 800,000 people in the United States die from cardiovascular disease each year—that's 1 in every 3 deaths, and about 160,000 of them occur in people under age 65.
 * Heart disease kills roughly the same number people in the United States each year as cancer, pneumonia, and accidents combined.
 * Heart disease and stroke cost the nation an estimated $555 billion in health care costs and lost productivity in 2015.
 
-####*Here's more:*
+#### *Here's more:*
 
 Majority of Americans are already suffering from heart disease. The prevalence of heart disease in the US is shown in the map below.
 
 
 ![Prevalence of heart disease](pictures/chd_map.gif)
 
-####*And…*
+#### *And…*
 
 *About 90% of the risk for the first heart attack is because of conditions or lifestyle factors that are preventable.*
 
@@ -41,7 +39,7 @@ Majority of Americans are already suffering from heart disease. The prevalence o
 There is plenty of room for improvement when it comes to raising awareness for cardiovascular risk, based on a [recent study](https://www.ahajournals.org/doi/pdf/10.1161/JAHA.117.005491) that found one in five adults at risk for heart disease don’t recognize a need to improve their health. We believe that a better understanding of risk factors underlying health perceptions and behaviors is needed to capitalize on cardiovascular preventive efforts.
 
 
-###Goals of our project
+### Goals of our project
 
 * Understanding risk factors for heart disease and stroke
 * Visualizing correlations of these risk factors with heart disease and stroke
@@ -49,7 +47,7 @@ There is plenty of room for improvement when it comes to raising awareness for c
 * Predicting risk of heart disease in an individual patient based on presence of risk factors
 
 
-#Related Work
+# Related Work
 
 We were inspired to work on this project given our collective interest in heart disease and role of data science for improved visualization for potential application by healthcare providers, patients and the community. One of our team members, Aakriti, is a cardiology fellow at Columbia, and also co-founder of a preventive cardiology startup called [Heartbeat](https://www.heartbeathealth.com). The mission of this company is to redesign the field of cardiology to be more inclusive and improve quality of life at any age. Their practice focuses on early diagnosis and management that empowers people to feel better, live healthier, understand their heart, and most importantly — have access to a trusted clinical team anywhere. They are a multidisciplinary team of doctors, educators, engineers, and researchers making prevention as simple as getting the heart checked. They are headquartered in Manhattan. 
 
@@ -57,7 +55,7 @@ Drawing inspiration from this work, we created this website with the goal to dev
 
 
 
-#Initial questions
+# Initial questions
 
 We sought to examine the risk factors for heart disease and their prevalence in New York City. We were also interested in examining novel ways of visualizing the correlation of indivisual risk factors with heart disease and stroke based on our knowledge gained in the Data Science class. In addition, we also wanted to find ways of predicting and visualizing an individual's risk for heart disease. As such, our questions were as follows:
 
@@ -66,13 +64,15 @@ We sought to examine the risk factors for heart disease and their prevalence in 
 * How can we predict and visualize an individual's risk for heart disease?
 
 
-#Data
+# Data
 
 In order to address the first two questions, we utilized the [500 Cities: Local Data for Better Health](https://catalog.data.gov/dataset/500-cities-local-data-for-better-health-b32fd) dataset. The 500 Cities project is a collaboration between CDC, the Robert Wood Johnson Foundation, and the CDC Foundation. The purpose of the 500 Cities Project is to provide city- and census tract-level small area estimates for chronic disease risk factors, health outcomes, and clinical preventive service use for the largest 500 cities in the United States. These small area estimates will allow cities and local health departments to better understand the burden and geographic distribution of health-related variables in their jurisdictions, and assist them in planning public health interventions. Since we were interested in visualizing these data only for New York city, we filtered the dataset to include data only from New York city.
 
+The data can also be downloaded on [Google Drive](https://drive.google.com/drive/folders/1U_8orguSxdIiNpxj_6sx8rav6ubqmmrq)
+
 Risk factors that we're interested in:: (15 total)
 
-* ACCESS2: Current lack of health insurance among adults aged 18<89><db><d2>64 Years
+* ACCESS2: Current lack of health insurance among adults aged 18-64 Years
 * BINGE: Binge drinking among adults aged >=18 Year
 * BPHIGH: High blood pressure among adults aged >=18 Year
 * BPMED: Taking medicine for high blood pressure control among adults aged >=18 Years with high blood pressure
@@ -97,9 +97,9 @@ Outcomes that we're interested in:: (2 total)
 In order to predict risk for heart disease for an individual, we utilized the [Framigham Risk Score](https://en.wikipedia.org/wiki/Framingham_Risk_Score). The Framingham Risk Score is a gender-specific algorithm used to estimate the 10-year cardiovascular risk of an individual. The Framingham Risk Score was first developed based on data obtained from the [Framingham Heart Study](https://en.wikipedia.org/wiki/Framingham_Heart_Study), to estimate the 10-year risk of developing coronary heart disease. We utilized the algorithm to develop visualization in ShinyApp as discussed below.
 
 
-#Exploratory Analysis
+# Exploratory Analysis
 
-###Loading and tidying the data
+### Loading and tidying the data
 
 We scraped the data directly from the web as seen in the code below and called it `cvrisk`.
 
@@ -150,7 +150,7 @@ nyc_cvrisk %>%
 ```
 
 
-###Making the animated scatterplot for coronary artery disease
+### Making the animated scatterplot for coronary artery disease
 
 We first created another dataset that can be used for the animated scatterplot such that the outcome measure for coronary artery disease appears as a separate variable in the dataset. We created another similar dataset for stroke.
 
@@ -181,18 +181,10 @@ nyc_cvrisk_joined_stroke = left_join(nyc_cvrisk_limited, nyc_stroke, by = "uniqu
 
 ```
 
-
-We then installed the package required for animation
-
-```{r, eval=FALSE}
-devtools::install_github('thomasp85/gganimate')
-```
-
-We then created an animated scatterplot with Coronary Heart Disease prevalence on the X-axis and different risk factors on the Y-axis
+We then created an animated scatterplot using `gganimate` with Coronary Heart Disease prevalence on the X-axis and different risk factors on the Y-axis
 
 ```{r, warning=FALSE}
 theme_set(theme_bw())  # pre-set the bw theme.
-
 
 ## using transition_length and state_length
 library(ggplot2)
@@ -222,7 +214,7 @@ p = nyc_cvrisk_joined %>%
 animate(p, fps = 2, height = 600, width = 1000)
 ```
 
-###Making the animated scatterplot for stroke
+### Making the animated scatterplot for stroke
 
 We created a similar animation for stroke, the code for which is shown here.
 
@@ -255,7 +247,7 @@ animate(pp, fps = 2, height = 600, width = 1000)
 ```
 
 
-###Making the correlation plot for coronary artery disease
+### Making the correlation plot for coronary artery disease
 
 To make the correlation plot, we first transformed our dataset in the wide format and called it `nyc_cvrisk_wide`.
 
@@ -297,7 +289,7 @@ nyc_cvrisk_wide %>%
 
 ```
 
-###Making the correlation plot for stroke
+### Making the correlation plot for stroke
 
 The correlation plot for stroke and risk factors of interest is as follows:
 
@@ -328,13 +320,13 @@ nyc_cvrisk_wide %>%
 ```
 
 
-#Findings
+# Findings
 
 We made several salient observations about correlation of risk factors with *Coronary Artery Disease* and *Stroke*.
 
 All of the risk factors (with the exception of binge drinking and cholesterol screening) have a positive association with both coronary heart disease and stroke. The top three risk factors for both outcomes are chronic kidney disease, diabetes and poor physical Health. In addition, many of the risk factors are associated with each other; namely, physical inactivity is heavily correlated with many of the other variables. The risk factors tend to be similarly associated with both coronary heart disease and stroke, with stronger associations with stroke. 
 
-###Factors correlated with coronary artery disease
+### Factors correlated with coronary artery disease
 
 We observed that the following factors were strongly positively correlated with coronary artery disease:
 
@@ -351,7 +343,7 @@ We observed that the following factors were strongly negatively correlated with 
 
 * Binge Alcohol Drinking - r = -0.6
 
-###Factors correlated with stroke
+### Factors correlated with stroke
 
 We observed that the following factors were strongly positively correlated with coronary artery disease:
 
@@ -373,7 +365,7 @@ We observed that the following factors were strongly negatively correlated with 
 * Cholesterol Screening - r = -0.25
 
 
-#Additional Analysis
+# Additional Analysis
 
 ### Geocoding
 We used the `shinyApp` and `leaflet` package to perform visualization of geographic distribution of several risk factors and outcomes in New York City. We observed that most of the risk factors were observed with higher frequency in the Harlem and Bronx area. Unhealthy behaviors like binge alcohol drinking, however, were more prevalent in downtown Manhattan.
@@ -382,7 +374,7 @@ We used the `shinyApp` and `leaflet` package to perform visualization of geograp
 We also used `shinyApp` and `plotly` package to build a program to calculate individual risk of heart disease using the Framingham Risk Score. This app allows for input of risk factor variables of an indivdual and predicts the 10-year cardiovascular risk using the Framingham risk score algorithm.
 
 
-#Discussion
+# Discussion
 
 In the process of building this project, we gained several insights about risk factors for heart disease. 
 
